# brent-level-3

./: .buildinfo  README.rst  api.html  genindex.html  index.html  objects.inv  other.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
_autosummary/: pydagogy_brent.Settings.html  pydagogy_brent.bisection_step.html  pydagogy_brent.brent.html  pydagogy_brent.html  pydagogy_brent.inverse_quadratic_interpolation_step.html  pydagogy_brent.secant_step.html  pydagogy_brent.test_convergence.html
_modules/: index.html  pydagogy_brent.html
_sources/_autosummary/: pydagogy_brent.Settings.rst  pydagogy_brent.bisection_step.rst  pydagogy_brent.brent.rst  pydagogy_brent.inverse_quadratic_interpolation_step.rst  pydagogy_brent.rst  pydagogy_brent.secant_step.rst  pydagogy_brent.test_convergence.rst
docs/source/: api.rst  conf.py  index.rst
tests/: test_convergence.py
