[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Denis Rosset <physics@denisrosset.com>"]
description = "Brent's algorithm"
license = "MIT"
name = "pydagogy-brent"
readme = "README.rst"
repository = "https://github.com/denisrosset/brent-level-3.git"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.0.0" 

ipython = "^8.1.1"
jupyterlab = "^3.3.2"
myst-nb = "^0.13.2"
sphinx = "4.3.2"
sphinx-autodoc-typehints = "^1.17.0"
sphinx-book-theme = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
doc8 = "^0.10.1"
esbonio = "^0.10.2"
isort = "^5.10.1"
mypy = "^0.941"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
rstcheck = "^3.3.1"
pylint = "^2.13.4"


[tool.black]
line-length = 99
target_version = ['py38']

[tool.isort]
line_length = 99
profile = "black"
py_version = 38
[tool.doc8]
max-line-length = 99
[tool.pytest.ini_options]
addopts = [
  "--tb=short",
  "--doctest-modules",
]

doctest_optionflags = ['NORMALIZE_WHITESPACE', 'IGNORE_EXCEPTION_DETAIL', 'ELLIPSIS', 'NUMBER']

testpaths = [
  "src/pydagogy_brent",
  "tests",
]
